--- a/.env
+++ b/.env
@@ -16,3 +16,9 @@ EXPIRES_SOON_SECONDS=120
 
 # Mode select for Oauth or FHIR
 AUTH_MODE=system
+
+PD_ENDPOINT_URL=http://100.27.251.103:6662/pd/trigger/
+
+
+
+
